JumpScript/tests/baselines/reference/ambientDeclarationsPatterns_tooManyAsterisks.errors.txt
tests/cases/conformance/ambient/ambientDeclarationsPatterns_tooManyAsterisks.jump(1,16): error TS5061: Pattern 'too*many*asterisks' can have at most one '*' character.


==== tests/cases/conformance/ambient/ambientDeclarationsPatterns_tooManyAsterisks.jump (1 errors) ====
    declare module "too*many*asterisks" { }
                   ~~~~~~~~~~~~~~~~~~~~
!!! error TS5061: Pattern 'too*many*asterisks' can have at most one '*' character.
    